# svc-telemetry

./: .cspell.project-words.txt  .dockerignore  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  log4rs.yaml
.compose/aetheric-svc/: test-server.yaml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client-rest/: Cargo.toml  README.md
client-rest/examples/: adsb-flow.rs  netrid-flow.rs  rest.rs
client-rest/src/: lib.rs
client-rest/tests/: adsb.rs  integration_test.rs
docs/: conops.md  icd.md  sdd.md
openapi/: ccsds.rs  types.rs
proto/: grpc.proto
server/: Cargo.toml  README.md  build.rs
server/src/: adsb.rs  cache.rs  config.rs  gis.rs  grpc.rs  grpc_clients.rs  lib.rs  main.rs  rest_api.rs
server/src/amqp/: macros.rs  mod.rs  pool.rs
server/src/cache/: macros.rs  mod.rs  pool.rs
server/src/grpc/: client.rs  mod.rs  server.rs
server/src/msg/: adsb.rs  mod.rs  netrid.rs
server/src/rest/: api.rs  macros.rs  mod.rs  server.rs
server/src/rest/api/: adsb.rs  aircraft.rs  health.rs  jwt.rs  mavlink.rs  mod.rs  netrid.rs
server/tests/: integration_test.rs
