[workspace]
members = ["server", "client-grpc", "client-rest"]

[workspace.package]
authors      = ["A.M. Smith <amsmith@arrowair.com>"]
edition      = "2021"
homepage     = "https://www.arrowair.com/docs/documentation/services/intro"
license-file = "LICENSE"
repository   = "https://github.com/Arrow-air/svc-telemetry"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
