[package]
description = "Telemetry Service GRPC client"
edition     = "2021"                                                       # Allowed values are 2015, 2018, 2021
homepage    = "https://www.arrowair.com/docs/documentation/services/intro"
keywords    = ["vtol", "client", "telemetry"]                              # max 5
license     = "BUSL-1.1"
name        = "svc-telemetry-client-grpc"
repository  = "https://github.com/Arrow-air/svc-telemetry"
version     = "0.0.1-develop.8"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs

[dependencies]
prost       = "0.11"
prost-types = "0.11"
tonic       = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "grpc"
