[package]
description = "Arrow telemetry service gRPC client"
keywords    = ["vtol", "client", "grpc", "telemetry"] # max 5
name        = "svc-telemetry-client-grpc"
version     = "0.2.1-develop.3"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
dev       = ["mock", "tokio"]
test_util = ["mock", "stub_backends", "tokio"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed server connection, only use for tests!
stub_backends = [
  "svc-telemetry/stub_server",
  "lib-common/grpc_mock",
  "tower",
  "tokio",
]
# Will implement stub functions for the client, only use for tests!
stub_client = ["svc-telemetry"]

[dependencies]
cfg-if        = "1.0"
log           = { version = "0.4" }
prost         = "0.12"
svc-telemetry = { path = "../server", optional = true }
tonic         = "0.10"
tower         = { version = "0.4", optional = true }

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "latest-develop"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.33"

[dev-dependencies]
logtest = "2.0"

# Make sure we enable the required modules for testing
[dev-dependencies.svc-telemetry-client-grpc]
features = ["dev"]
path     = "."

[[example]]
name = "grpc"
