[package]
description = "Arrow telemetry service REST client"
keywords    = ["vtol", "client", "rest", "telemetry"] # max 5
name        = "svc-telemetry-client-rest"
version     = "0.2.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
adsb_deku     = "0.6"
chrono        = { version = "0.4", features = ["serde"] }
lapin         = "2.1"
mavlink       = "0.10"
ordered-float = { version = "3.4", features = ["serde"] }
packed_struct = "0.10"
serde         = "1.0"
serde_json    = "1.0"
utoipa        = { version = "2.2", features = ["axum_extras"] }
uuid          = { version = "1.2", features = ["serde"] }

[dev-dependencies]
futures-lite = "1.13"
hyper        = { version = "0.14", features = ["full"] }
tokio        = { version = "1.20", features = ["full"] }

[dev-dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.2.0"

[[example]]
name = "rest"
