[package]
description = "Arrow telemetry service REST client"
keywords    = ["vtol", "client", "rest", "telemetry"] # max 5
name        = "svc-telemetry-client-rest"
version     = "0.2.1-develop.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
adsb_deku     = "0.6"
chrono        = { version = "0.4", features = ["serde"] }
lapin         = "2.3"
ordered-float = { version = "4.1", features = ["serde"] }
packed_struct = "0.10"
serde         = "1.0"
serde_json    = "1.0"
uuid          = { version = "1.5", features = ["serde"] }

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.0"

[dev-dependencies]
futures-lite = "1.13"
hyper        = { version = "0.14", features = ["full"] }
tokio        = { version = "1.33", features = ["full"] }
uuid         = { version = "1.5", features = ["v4"] }

[dev-dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "latest-develop"

[[example]]
name = "rest"
