[package]
description = "Aetheric telemetry service REST client"
keywords    = ["vtol", "client", "rest", "telemetry"]  # max 5
name        = "svc-telemetry-client-rest"
version     = "0.2.1-develop.5"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
adsb_deku     = "0.6"
lapin         = "2.3"
ordered-float = { version = "4.1", features = ["serde"] }
packed_struct = "0.10"
serde         = "1.0"
serde_json    = "1.0"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.0"

[dev-dependencies]
futures-lite  = "1.13"
hyper         = { version = "0.14", features = ["full"] }
packed_struct = "0.10"
tokio         = { version = "1.33", features = ["full"] }

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "v2.0.0"

[dev-dependencies.svc-gis-client-grpc]
git = "https://github.com/aetheric-oss/svc-gis"
tag = "v0.2.0"

[[example]]
name = "rest"
