[package]
description = "Telemetry Service GRPC and REST servers"
name        = "svc-telemetry"
version     = "0.0.1-develop.8"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
vendored-openssl = ['openssl/vendored']

[dependencies]
adsb_deku      = "0.6"
anyhow         = "1.0"
axum           = "0.5"
cargo-husky    = "1"
chrono         = { version = "0.4", features = ["serde"] }
clap           = { version = "4.0", features = ["derive"] }
config         = "0.13"
deadpool-redis = { version = "0.11" }
dotenv         = "0.15"
futures        = "0.3"
hyper          = "0.14"
log            = "0.4"
mavlink        = "0.10"
openssl        = "0.10"
ordered-float  = { version = "3.4", features = ["serde"] }
packed_struct  = "0.10"
prost          = "0.11"
prost-build    = "0.11"
prost-types    = "0.11"
serde          = "1.0"
serde_json     = "1.0"
snafu          = "0.7"
tokio          = { version = "1.20", features = ["full"] }
tokio-util     = "0.7"
tonic          = "0.8"
tonic-health   = "0.7"
uuid           = { version = "1.2", features = ["serde"] }

[dependencies.svc-storage-client-grpc]
git = "https://github.com/Arrow-air/svc-storage"
tag = "v0.9.0-develop.10"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "3.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[build-dependencies]
tonic-build = "0.8"
